Fixed map alignment

--- a/public/stylesheets/global.css
+++ b/public/stylesheets/global.css
@@ -176,9 +176,9 @@ div.menu{
 }
 
 .homepage-map{
-    width: 330px;
+    width: 336px;
     height: 200px;
-    margin: 10px;
+    margin: 7px;
 }
 
 .contentContainer{
